@@ -36,6 +36,7 @@
   * Should list super classes in C++ visibility order (from child to parent).
   * Class.type should reflect class name, not registration name.
   * Should not create 'cast' method when superclasses have 'cast: false'.
+  * Allow multiple 'header_base' paths to remove (removes the first one matching).
 
 == 2.0.0 2012-01-21
 * Complete rewrite in Lua
